--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,27 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.2</version>
       </plugin>
+      <plugin>
+        <groupId>com.ruleoftech</groupId>
+        <artifactId>markdown-page-generator-plugin</artifactId>
+        <version>2.1.0</version>
+        <executions>
+          <execution>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <inputDirectory>${basedir}/src/main/resources/markdown</inputDirectory>
+          <outputDirectory>${basedir}/src/main/resources/html</outputDirectory>
+          <inputEncoding>UTF-8</inputEncoding>
+          <outputEncoding>ISO-8859-15</outputEncoding>
+          <headerHtmlFile>${project.basedir}/src/main/resources/markdown/html/header.html</headerHtmlFile>
+          <footerHtmlFile>${project.basedir}/src/main/resources/markdown/html/footer.html</footerHtmlFile>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
