--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -34,4 +34,4 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
-            statique.zip
+            *.zip
