--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -24,8 +24,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Step 4 - Build with Maven and Tests
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Step 4 - Build with Maven
+        run: mvn clean install
       - name: "Step 5 - Create release"
         run: |
           echo "done!"
