--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       # ...
       - name: Step 1 - Checkout main branch from Github
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
       - name: Step 2 - Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -24,18 +24,14 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Step 4 - Build with Maven
-        run: mvn clean install
-      - name: Step 5 - Publish package
-        run: mvn --batch-mode deploy
+      - name: Step 4 - Generate the artifacts
+        uses: skx/github-action-build@main
+        with:
+          builder: .github/build
+      - name: Step 5 - Upload the artifacts
+        uses: skx/github-action-publish-binaries@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Step 6 - Create release
-        run: |
-          echo "done!"
-      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          files: |
-            *.zip
+          args: '*.zip'
+      
