--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -25,11 +25,11 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Step 4 - Generate the artifacts
-        uses: skx/github-action-build@main
+        uses: skx/github-action-build@master
         with:
           builder: .github/build
       - name: Step 5 - Upload the artifacts
-        uses: skx/github-action-publish-binaries@main
+        uses: skx/github-action-publish-binaries@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
