--- a/.github/build
+++ b/.github/build
@@ -1,4 +1,7 @@
 apt-get update --quiet
 apt-get --assume-yes install  maven
 
+JAVA_HOME=$(/usr/libexec/java_home)
+PATH=$JAVA_HOME/jre/bin:$PATH
+
 mvn clean package
