Change zip path

--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: '*.zip'
+          args: 'target/statique.zip'
       
