--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       # ...
       - name: Step 1 - Checkout main branch from Github
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
       - name: Step 2 - Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -24,14 +24,28 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Step 4 - Generate the artifacts
-        uses: skx/github-action-build@master
-        with:
-          builder: .github/build
-      - name: Step 5 - Upload the artifacts
-        uses: skx/github-action-publish-binaries@master
+      - name: Step 4 - Build with Maven
+        run: mvn clean install
+      - name: Step 5 - Publish package
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Step 6 - Create release
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: 'target/statique.zip'
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+          draft: false
+          prerelease: false
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            target/statique.zip
+
       
