Only use action-automatic-releases

--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -28,22 +28,13 @@ jobs:
         run: mvn clean package
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Step 5 - Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-          draft: false
-          prerelease: false
-      - name: Step 6 - Upload zip
+      - name: Step 5 - Create release and upload zip
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
           prerelease: false
+          title: Release ${{ github.ref }}
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           files: |
             target/statique.zip
 
