--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      # ...
       - name: Step 1 - Checkout main branch from Github
         uses: actions/checkout@v2
       - name: Step 2 - Set up JDK 11
@@ -28,11 +27,24 @@ jobs:
         run: mvn clean package
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Step 5 - Create release and upload zip
-        uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Step 5 - Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
           prerelease: false
-          title: Release ${{ github.ref }}
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: |
-            target/statique.zip
+      - name: Step 6 - Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/statique.zip
+          asset_name: statique.zip
+          asset_content_type: application/zip
+      
