--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
       <artifactId>handlebars</artifactId>
       <version>4.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.30</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
