Add zip to release

--- a/.github/workflows/generateRelease.yml
+++ b/.github/workflows/generateRelease.yml
@@ -37,7 +37,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-      - name: Step 6 - Upload Release Asset
+      - name: Step 6 - Upload Statique Zip to Release
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
@@ -46,5 +46,15 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: target/statique.zip
           asset_name: statique.zip
+          asset_content_type: application/zip
+      - name: Step 8 - Upload Javadoc Zip to Release
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/javadoc.zip
+          asset_name: javadoc.zip
           asset_content_type: application/zip
       
