--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,16 @@
       <artifactId>sonar-plugin-api</artifactId>
       <version>8.9.0.43852</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.14.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.14.1</version>
+    </dependency>
   </dependencies>
 
   <profiles>
