Remove useless parameters

--- a/config/initFolder/config.json
+++ b/config/initFolder/config.json
@@ -1,8 +1,3 @@
 {
-  "url": "/monSite2",
-  "title": "Website Generator",
-  "authors": "Diserens Lois, Jordil Kevin, Sciarra Daniel",
-  "date": "2021-04-25",
-  "filesPath": "./contenuMD",
-  "buildPath": "./build"
+  "title": "Website Generator"
 }
